<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title_Downloading"
        android:text="@string/downloading"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/message"
        android:text="@string/download_process"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:id="@+id/download_Progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="100"
        android:progressDrawable="@drawable/custom_progressbar"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/stop_download"
        android:layout_marginBottom="10dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:text="@string/stop_download"
        android:textColor="@color/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>