<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topAppBarView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@color/low_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </View>
    <TextView
        android:id="@+id/top_appBar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donwloadzy"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/topAppBarView"
        app:layout_constraintEnd_toEndOf="@+id/topAppBarView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topAppBarView" />



    <EditText
        android:id="@+id/linkInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textMultiLine"
        android:hint="@string/Example_Link"
        android:textSize="12sp"
        android:background="@drawable/edit_text_bg"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_appBar_text"
        android:autofillHints="links" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/download_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/download"
        android:textSize="20sp"
        android:background="@drawable/download_button_bg"
        android:padding="10dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkInput"/>
</androidx.constraintlayout.widget.ConstraintLayout>